--- a/css/main.css
+++ b/css/main.css
@@ -1,48 +1,3 @@
-/*-----------------------------------------------------------------
-[Legal Notice]
-
-Copyright (c) HighHay/Mivfx
-Before using this template, you should agree with themeforest licenses terms.
-http://themeforest.net/licenses
--------------------------------------------------------------------*/
-
-/*------------------------------------------------------------------
-[Table of contents]
-/** CSS Reference
-    0. Base Style
-        0.button Buttons
-        0.color Color bg-XX text-XX
-	1. Link and logo at top / .header-top
-	2. Dot navigation at right / #fp-nav, #fp-nav.right
-	3. Quick links at right / .quick-link
-		3.1 quick link position / .quick-link .count-X (where X=1,2,3,4,5)
-		3.2 Links
-	4. Page footer / .page-footer
-	5. Page cover / .page-cover
-		5.1. page cover background image,color (overriden by data-bgcolor or data-image-src atributes) / .page-cover .cover-bg
-		5.2 Page cover  background mask (overriden by data-bgcolor or data-image-src atributes) / .page-cover .cover-bg-mask
-	6. Main page / .page-main
-		6.0 Page footer with scroll down button / .p-footer
-		6.1 Page general params / .page-cent, .page
-		6.3 Page and slide animation / .page.transition , .slide.transition
-		6.4 Clock countdown / .page-when, .pane-when .clock
-		6.5 Registration form / .page-register
-		6.6 About us / .page-about
-		6.7 Contact, Message / .page-contact
-	7. Video background / .video-container
-
-	Hooks for responsiveness (mobile friendly) can be found in "main_responsive.css" file
-
-**/
-/*---------- 
-[Colors]
-    text color : #FFFFFF, #FFF
-    blue : #5677FC
-    transluscent white : rgba(255, 255, 255, 0.15) / #fff;
-*/
-
-/* 0. Base Style  */
-/* initialization */
 html {
     color: #fff;
     font-size: 1em;
@@ -1694,3 +1649,7 @@ strong,
 	top: -22px;
 	left: 0;
 }
+.ease {-webkit-transition: all 500ms ease-in-out; -moz-transition: all 500ms ease-in-out; -ms-transition: all 500ms ease-in-out; -o-transition: all 500ms ease-in-out; transition: all 500ms ease-in-out;}
+.redirect {opacity:0;background: rgba(0,0,0,0.9);position: fixed;top: 0;bottom: 0;left: 0;right: 0;z-index: 1;}
+.redirect p {position: absolute;top: 50%;left: 0;right: 0;text-align: center;-webkit-transform: translate(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%);color:#fff;}
+.redirect p span {font-weight:bold;font-size:30px;}
