--- a/css/main.css
+++ b/css/main.css
@@ -678,7 +678,7 @@ strong,
 	z-index: 100;
 	position: fixed;
 	bottom: 30px;
-	left: 56px;
+	left: 13px;
 	margin-left: 9px;
 	color: #fff;
 	font-size:18px;
@@ -1649,10 +1649,6 @@ strong,
 	top: -22px;
 	left: 0;
 }
-.redirect {-webkit-transition: all 500ms ease-in-out;
--moz-transition: all 500ms ease-in-out;
--ms-transition: all 500ms ease-in-out;
--o-transition: all 500ms ease-in-out;
-transition: all 500ms ease-in-out;opacity:0;background: rgba(0,0,0,0.9);position: fixed;bottom: 0;left: 0;right: 0;z-index: 1;padding:7px 0;}
+.redirect {-webkit-transition: all 500ms ease-in-out; -moz-transition: all 500ms ease-in-out; -ms-transition: all 500ms ease-in-out; -o-transition: all 500ms ease-in-out; transition: all 500ms ease-in-out;opacity:0;background: rgba(0,0,0,0.9);position: fixed;bottom: 0;left: 0;right: 0;z-index: 1;padding:7px 0;}
 .redirect p {text-align: center;color:#fff;margin: 0;font-size:12px;}
 .redirect p span {font-weight:bold;}
