--- a/css/style-color1.css
+++ b/css/style-color1.css
@@ -14,8 +14,8 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 .page .content .subhead a {
-    color: #1d1d1d;
-    background: #fff;
+    color: #fff;
+    background: #4c9e45;
     display: inline-block;
     padding: 0 8px;
 	padding-bottom: 1px;
